Changed from os to pathlib

--- a/notebooks/Intro_to_Python_Day1_Pt6.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt6.ipynb
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use os.listdir()\n"
+    "# Use Path.iterdir()\n"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "id": "2edd989b",
    "metadata": {},
    "source": [
-    "The command `os.listdir` is equivalent to `ls` in the shell.\n",
+    "The command `Path.iterdir` is equivalent to `ls` in the shell.\n",
     "\n",
     "In previous lessons, we saw how to use the library pandas to load the species data into memory as a DataFrame, how to select a subset of the data using some criteria, and how to write the DataFrame into a CSV file. Let’s write a script that performs those three steps in sequence for the year 2002:"
    ]
@@ -303,15 +303,14 @@
     "# Writing Unique File Names\n",
     "Notice that the code above created a unique filename for each year.\n",
     "```\n",
-    "filename = '../data/yearly_files/surveys' + str(year) + '.csv'\n",
+    "filename = Path('../data/yearly_files', f\"surveys{year}.csv\")\n",
     "```\n",
     "Let’s break down the parts of this name:\n",
     "\n",
-    "- The first part is some text that specifies the directory to store our data file in (data/yearly_files/) and the first part of the file name (surveys): 'data/yearly_files/surveys'\n",
-    " - We can concatenate this with the value of a variable, in this case year by using the plus + sign and the variable we want to add to the file name: + str(year)\n",
-    " - Then we add the file extension as another text string: + '.csv'\n",
+    "- The first part is some text that specifies the directory to store our data file in (data/yearly_files/): 'data/yearly_files/\n",
+    "- We can use an f-string to create a unique filename with the value of the year variable in { } and the required file extension\n",
     "\n",
-    "Notice that we use single quotes to add text strings. The variable is not surrounded by quotes. This code produces the string `../data/yearly_files/surveys2002.csv` which contains the path to the new filename AND the file name itself."
+    "This code produces the Path Object `../data/yearly_files/surveys2002.csv` which contains the path to the new filename AND the file name itself."
    ]
   },
   {
@@ -872,66 +871,6 @@
     "- Conditional statements enable execution of different operations on different data.\n",
     "\n",
     "- Functions enable code reuse.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "977cbd8f",
-   "metadata": {},
-   "source": [
-    "# ❗Key Points from all of today\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "-  Python is an interpreted language which can be used interactively or in scripting mode (executing a series of commands saved in file).\n",
-    "\n",
-    "- One can assign a value to a variable in Python. Those variables can be of several types, such as string, integer, floating point and complex numbers.\n",
-    "- Lists and tuples are similar in that they are ordered lists of elements; they differ in that a tuple is immutable (cannot be changed).\n",
-    "\n",
-    "- Dictionaries are data structures that provide mappings between keys and values.\n",
-    "\n",
-    "- Libraries enable us to extend the functionality of Python.\n",
-    "\n",
-    "- Pandas is a popular library for working with data.\n",
-    "- A Dataframe is a Pandas data structure that allows one to access data by column (name or index) or row.\n",
-    "\n",
-    "- Aggregating data using the groupby() function enables you to generate useful summaries of data quickly.\n",
-    "\n",
-    "- Plots can be created from DataFrames or subsets of data that have been generated with groupby().\n",
-    "\n",
-    "- In Python, portions of data can be accessed using indices, slices, column headings, and condition-based subsetting.\n",
-    "\n",
-    "- Python uses 0-based indexing, in which the first element in a list, tuple or any other data structure has an index of 0.\n",
-    "\n",
-    "- Pandas enables common data exploration steps such as data indexing, slicing and conditional subsetting.\n",
-    "\n",
-    "- Pandas uses other names for data types than Python, for example: object for textual data.\n",
-    "\n",
-    "- A column in a DataFrame can only have one data type.\n",
-    "\n",
-    "- The data type in a DataFrame’s single column can be checked using dtype.\n",
-    "\n",
-    "- Make conscious decisions about how to manage missing data.\n",
-    "\n",
-    "- A DataFrame can be saved to a CSV file using the to_csv function.\n",
-    "\n",
-    "- Pandas’ `merge` and `concat` can be used to combine subsets of a DataFrame, or even data from different files.\n",
-    "\n",
-    "- `join` function combines DataFrames based on index or column.\n",
-    "\n",
-    "- Joining two DataFrames can be done in multiple ways (left, right, and inner) depending on what data must be in the final DataFrame.\n",
-    "\n",
-    "- `to_csv` can be used to write out DataFrames in CSV format.\n",
-    "\n",
-    "- Loops are 🔥\n",
-    " \n",
-    "- Functions are 💯\n",
-    "\n",
-    "\n",
-    "## 🥷 Sneaky section: Answers\n",
-    "Answers to all of the notebooks can be found at the carpentries website:\n",
-    "https://datacarpentry.org/python-ecology-lesson/index.html"
    ]
   }
  ],
