Added comments and plotting sections

--- a/notebooks/Intro_to_Python_Day1_Pt2.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt2.ipynb
@@ -199,7 +199,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Assigning the imported data to a variable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -213,7 +215,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Viewing the dataframe"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -235,7 +239,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inspecting the type of surveys_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,7 +255,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inspecting the types within surveys_df"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,7 +294,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inspecting the column names again"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -300,7 +310,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inspecting the first few rows of the dataframe"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -391,13 +403,6 @@
    "source": [
     "# Look at the unique species ids\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -504,7 +509,7 @@
    },
    "outputs": [],
    "source": [
-    "# Group data by sex\n"
+    "# Group data by sex and assign to a variable"
    ]
   },
   {
@@ -601,7 +606,7 @@
    },
    "outputs": [],
    "source": [
-    "# Count the number of samples by species\n",
+    "# Count the number of samples by species and assign to a variable\n",
     "species_counts ="
    ]
   },
@@ -617,7 +622,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Counting the number of records for the species 'DO'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -712,7 +719,7 @@
    },
    "outputs": [],
    "source": [
-    "# Get a var total_count\n",
+    "# Create a total_count variable that sums the 'record_id' values for each site\n",
     "\n",
     "# Now plot it\n"
    ]
@@ -745,6 +752,52 @@
    "outputs": [],
    "source": [
     "# 2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quick & Easy Plotting using Plotnine\n",
+    "We can also create plots using the plotnine library.\n",
+    "\n",
+    "See [plotnine documentation](https://plotnine.readthedocs.io/en/v0.12.4/) for more examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing plotnine library\n",
+    "import plotnine as p9\n",
+    "\n",
+    "# Species Counts using Plotnine\n",
+    "p9.ggplot(data=surveys_df, mapping=p9.aes(x='species_id')) + p9.geom_bar() + p9.theme(axis_text_x=p9.element_text(angle=90, hjust=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quick & Easy Plotting using Plotly\n",
+    "We can also create plots using the Plotly library.\n",
+    "\n",
+    "See [plotly documentation](https://plotly.com/python/plotly-express/) for more examples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing plotly express library\n",
+    "import plotly.express as px\n",
+    "\n",
+    "# Species Counts using Plotly Express\n",
+    "px.bar(data_frame=species_counts, x=species_counts.index, y='record_id', title='Species Counts', labels={'species_id':'Species ID', 'record_id':'Count'})"
    ]
   },
   {
@@ -835,7 +888,7 @@
    },
    "outputs": [],
    "source": [
-    "# Challenge cells\n"
+    "# Challenge cell #1\n"
    ]
   },
   {
@@ -843,7 +896,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Challenge cell #2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Challenge cell #3\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -881,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
