Updated useful tips section.

--- a/notebooks/Intro_to_Python_Day1_Pt5.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt5.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09120bc3",
    "metadata": {},
@@ -15,13 +16,16 @@
     "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks \n",
     "\n",
     "Useful Tips:\n",
-    "- The notebook autosaves\n",
-    "- You run a cell with **shift + enter** or using the run button in the tool bar\n",
-    "- If you run a cell with **option + enter** it will also create a new cell below\n",
-    "- See *Help > Keyboard Shortcuts* or the *Cheatsheet* for more info\n",
+    "- To save the notebook/file, <kbd>ctrl</kbd> + <kbd>s</kbd> or Go to `File -> Save`.\n",
+    "- You run a cell with <kbd>shift</kbd> + <kbd>enter</kbd> or\n",
+    "    - **Jupyter Notebook, JupyterLab**: you can use the run button ▶ in the tool bar.\n",
+    "    - **VScode**: you can use the run button ▶ in front of the cell.\n",
+    "- If you run a cell with <kbd>option (alt)</kbd> + <kbd>enter</kbd> it will also create a new cell below.\n",
+    "- If you opened this a classic notebook you can check *Help > Keyboard Shortcuts* else see the *Cheatsheet* for more info.\n",
+    "- If you are using VScode, See [Jupyter Notebooks in VS Code](https://code.visualstudio.com/docs/datascience/jupyter-notebooks) for more info.\n",
     "- The notebook has different type of cells (Code and Markdown are most commonly used): \n",
-    "    - **Code** cells expect code for the Kernel you have chosen, syntax highlighting is available, comments in the code are specified with # -> code after this will not be executed\n",
-    "    - **Markdown** cells allow you to right report style text, using markdown for formatting the style (e.g. Headers, bold face etc)\n",
+    "    - **Code** cells expect code for the Kernel you have chosen, syntax highlighting is available, comments in the code are specified with `#` -> code after this will not be executed.\n",
+    "    - **Markdown** cells allow you to right report style text, using markdown for formatting the style (e.g. Headers, bold face etc).\n",
     "---"
    ]
   },
