Fixed minor grammatical errors

--- a/notebooks/Intro to Jupyter.ipynb
+++ b/notebooks/Intro to Jupyter.ipynb
@@ -31,13 +31,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "---\n",
     "## General things to note\n",
-    "- To save the notebook/file, <kbd>ctrl</kbd> + <kbd>s</kbd> or Go to `File -> Save`.\n",
-    "- You run a cell with <kbd>shift</kbd> + <kbd>enter</kbd> or\n",
+    "- To save the notebook/file, <kbd>Ctrl</kbd> + <kbd>s</kbd> or Go to `File -> Save`.\n",
+    "- You run a cell with <kbd>Shift</kbd> + <kbd>Enter</kbd> or\n",
     "    - **Jupyter Notebook, JupyterLab**: you can use the run button ▶ in the tool bar.\n",
     "    - **VScode**: you can use the run button ▶ in front of the cell.\n",
-    "- If you run a cell with <kbd>option (alt)</kbd> + <kbd>enter</kbd> it will also create a new cell below.\n",
+    "- If you run a cell with <kbd>Option (Alt)</kbd> + <kbd>Enter</kbd> it will also create a new cell below.\n",
     "- If you opened this a classic notebook you can check *Help > Keyboard Shortcuts* else see the *Cheatsheet* for more info.\n",
     "- If you are using VScode, See [Jupyter Notebooks in VS Code](https://code.visualstudio.com/docs/datascience/jupyter-notebooks) for more info.\n",
     "- The notebook has different type of cells (Code and Markdown are most commonly used): \n",
@@ -69,7 +69,7 @@
    "source": [
     "this is a markdown cell\n",
     "\n",
-    "try executing it with <kbd>shift</kbd> + <kbd>enter</kbd> when it is highlighted"
+    "try executing it with <kbd>Shift</kbd> + <kbd>Enter</kbd> when it is highlighted"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "\n",
     "As you might have realised the cell you are **editing** is highlighted by a blue bar to its left and has a blue box around it.\n",
     "\n",
-    "If you press <kbd>shift</kbd> + <kbd>enter</kbd> on such a cell it gets executed, i.e. the code or markdown within it gets evaluated and the outputs are shown below the cell or the markdown gets rendered.\n",
+    "If you press <kbd>Shift</kbd> + <kbd>Enter</kbd> on such a cell it gets executed, i.e. the code or markdown within it gets evaluated and the outputs are shown below the cell or the markdown gets rendered.\n",
     "\n",
     "In **command** mode you will only see the blue bar to the left. In this case you can use keyboard short cuts to edit the notebook as a whole, e.g. move cells up and down or change their type.\n"
    ]
@@ -93,15 +93,15 @@
    "source": [
     "## Keyboard shortcuts\n",
     "\n",
-    "The most important keyboard shortcuts are <kbd>enter</kbd>, which enters edit mode, and `Esc`, which enters command mode. Some other useful shortcuts include:\n",
+    "The most important keyboard shortcuts are <kbd>Enter</kbd>, which enters edit mode, and `Esc`, which enters command mode. Some other useful shortcuts include:\n",
     "\n",
-    "1. Basic navigation: <kbd>enter</kbd>, <kbd>shift</kbd> + <kbd>enter</kbd>, <kbd>up</kbd> (or <kbd>k</kbd>), <kbd>down</kbd> (or <kbd>j</kbd>).\n",
+    "1. Basic navigation: <kbd>Enter</kbd>, <kbd>Shift</kbd> + <kbd>Enter</kbd>, <kbd>Up</kbd> (or <kbd>k</kbd>), <kbd>Down</kbd> (or <kbd>j</kbd>).\n",
     "\n",
     "2. Saving the notebook: <kbd>s</kbd>\n",
     "\n",
     "3. Cell creation: Create empty cell above <kbd>a</kbd>, Create empty cell below <kbd>b</kbd>\n",
     "\n",
-    "4. Delete cell: Select cell (or press <kbd>esc</kbd> to switch to command mode) then press <kbd>d</kbd> twice.\n",
+    "4. Delete cell: Select cell (or press <kbd>Esc</kbd> to switch to command mode) then press <kbd>d</kbd> twice.\n",
     "\n",
     "Check out the [documentation](https://jupyter-notebook.readthedocs.io/en/stable/examples/Notebook/Notebook%20Basics.html#Keyboard-Navigation) for more useful shortcuts. \n"
    ]
