--- a/notebooks/Intro_to_Python_Day1_Pt7.ipynb
+++ b/notebooks/Intro_to_Python_Day1_Pt7.ipynb
@@ -17,11 +17,11 @@
     "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks \n",
     "\n",
     "Useful Tips:\n",
-    "- To save the notebook/file, <kbd>ctrl</kbd> + <kbd>s</kbd> or Go to `File -> Save`.\n",
-    "- You run a cell with <kbd>shift</kbd> + <kbd>enter</kbd> or\n",
+    "- To save the notebook/file, <kbd>Ctrl</kbd> + <kbd>s</kbd> or Go to `File -> Save`.\n",
+    "- You run a cell with <kbd>Shift</kbd> + <kbd>Enter</kbd> or\n",
     "    - **Jupyter Notebook, JupyterLab**: you can use the run button ▶ in the tool bar.\n",
     "    - **VScode**: you can use the run button ▶ in front of the cell.\n",
-    "- If you run a cell with <kbd>option (alt)</kbd> + <kbd>enter</kbd> it will also create a new cell below.\n",
+    "- If you run a cell with <kbd>Option (Alt)</kbd> + <kbd>Enter</kbd> it will also create a new cell below.\n",
     "- If you opened this a classic notebook you can check *Help > Keyboard Shortcuts* else see the *Cheatsheet* for more info.\n",
     "- If you are using VScode, See [Jupyter Notebooks in VS Code](https://code.visualstudio.com/docs/datascience/jupyter-notebooks) for more info.\n",
     "- The notebook has different type of cells (Code and Markdown are most commonly used): \n",
